hphp/test/slow/php7_backported/engine-exceptions/error_001.php.expectf

Fatal error: Uncaught Error: Foo in %s/error_001.php:4
Stack trace:
#0 %s/error_001.php(8): alpha()
#1 %s/error_001.php(12): beta()
#2 %s/error_001.php(16): gamma()
#3 %s/error_001.php(19): main()
#4 {main}
